--- a/css/index.html
+++ b/css/index.html
@@ -5,16 +5,13 @@
     <title>HTML help</title>
   </head>
   <body>
-    <div class="container">
+    <div class ="container">
       <h1>HTML help</h1>
-
       <p>This is a very special page. If you click somewhere, it will tell you what type of HTML element you clicked on.</p>
-
       <p>Look at this cute walrus!</p>
       <img src="img/walrus.jpg">
     </div>
-
-    <script   src="https://code.jquery.com/jquery-3.3.1.min.js"   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="   crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <script src="js/scripts.js"></script>
   </body>
 </html>
