--- a/css/index.html
+++ b/css/index.html
@@ -2,17 +2,17 @@
 <html>
   <head>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
-    <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
-    <script src="js/scripts.js"></script>
     <title>HTML help</title>
   </head>
   <body>
     <div class ="container">
-      <h1>HTML help</h1>
-      <p>This is a very special page. If you click somewhere, it will tell you what type of HTML element you clicked on.</p>
+      <h1>peek-a-boo</h1>
+      <p>Let's play peek-a-boo. Click here to see the surprise!</p>
       <p>Look at this cute walrus!</p>
       <img src="img/walrus.jpg">
     </div>
+    <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
+    <script src="js/scripts.js"></script>
   </body>
 </html>
     
